  ApacheHandler in your logs. Reported by Ogden Nefix.

- HTML::Entities is now a prereq. Not requiring it made for various
  weird gyrations in the tests that didn't seem to work all the time,
  causing various failures.

[ ENHANCEMENTS ]

- Added a new Compiler::ToObject parameter,
  named_component_subs. Turning this on makes it possible to profile
  components.


1.35  Oct 17, 2006

[ BUG FIXES ]

- Version 1.34 introduced a bug that caused corruption of the callers
stack when a component call with content was used.

- When Mason tried to load a package required for a feature (like
Cache::Cache for $m->cache) and this failed, the error message would
say something like "Can't locate Cache::Cache". However, the real
error could be that Cache::Cache was present, but a module required by
Cache::Cache was not. Now we report the real missing module.

- Some people saw a spurious test failure in 05-request.t. RT #22099.

- Added Module::Build to the build_requires prereqs.


1.34  Oct 14, 2006

[ BUG FIXES ]

- List Module::Build as a build prereq in the Build.PL, so it shows up
in META.yml. Reported by Colin Henein. RT #22097.

- Apache::Request and mod_perl{1,2} will no longer show up as prereqs
in META.yml. Requested by Jesse Vincent.

- Fixed a serious memory leak bug where an object referenced in
arguments to another component was never destroyed. Reported by
Dominic Mitchell.

- Using $m->call_next from a helper component should reset base_comp
to the request_comp.  Reported by Mark Elrod.

- The 08-ah.t and 16-live-cgi.t test files could fail with an error
like "Failed to re-load 'Mason::Build'" when Mason was being installed
via the CPANPLUS shell (and maybe other cases). Reported by David
Wheeler.

- Fixed a bug where $m->clear_buffer inside a component called from a
comp_with_content did not clear all buffers.

[ ENHANCEMENTS ]

- Added support for get_server_port() in FakeApache. Patch from Dieter
Piercey.


1.33  May 28, 2006

[ BUG FIXES ]
